# branch

./: .gitignore  CMakeLists.txt  LICENSE  PHASE0_DIAGNOSTIC_REPORT.md  README.md  build
.github/workflows/: ci.yml
container/: branch.def
docs/: CODE_REVIEW.md  CODE_REVIEW_backend_gpu.md  CODE_REVIEW_classify.md  CODE_REVIEW_graph.md  CODE_REVIEW_tests_workflow.md  architecture.md  branch-project-design.md  branch_design_gaps.md  cnv_roadmap.md  control_zyrkel_pattern.md  graph-format-spec.md
knowledge/catalog/: catalog.db
phase0/: T0.done.json  T1.done.json  T2_T4.done.json  T5.submitted.json  env.json  env.stderr  module_probe.json  scale_projection.json  submit_hummel.sh
phase0/scripts/: control_check.sh  hprc_download_hg002.sh  t0_1_module_probe.sh  t0_env_probe.sh  t1_container_pull.sh  t5_align.sbatch  t6_t7_roi_coverage.sbatch
src/: CMakeLists.txt
src/align/: CMakeLists.txt  reference_aligner.cpp  reference_aligner.hpp
src/analysis/: CMakeLists.txt  annotation_bed.cpp  annotation_bed.hpp  conservation_state.hpp  coverage_cn.cpp  coverage_cn.hpp  coverage_conservation.cpp  coverage_conservation.hpp  igh_locus.hpp  repeat_cn.cpp  repeat_cn.hpp  vaf_band_stats.cpp  vaf_band_stats.hpp
src/backend/: CMakeLists.txt  backend_factory.cpp  backend_factory.hpp  backend_vtable.hpp  cpu_backend.cpp  cpu_backend.hpp  gpu_backend.cpp  gpu_backend.hpp  gpu_backend_stub.cpp  vaf_stats.hpp
src/classify/: CMakeLists.txt  cascade.hpp  feature_extractor.cpp  feature_extractor.hpp  features.hpp  hierarchical_disambiguator.cpp  hierarchical_disambiguator.hpp  mixed_decomposer.cpp  mixed_decomposer.hpp
src/cli/: CMakeLists.txt  analyze_cmd.cpp  assemble_cmd.cpp  main.cpp
src/common/: CMakeLists.txt  memory.cpp  memory.hpp
src/consensus/: CMakeLists.txt  majority_voter.cpp  majority_voter.hpp
src/detect/: CMakeLists.txt  bubble_detector.cpp  bubble_detector.hpp
src/gpu/: CMakeLists.txt  overlap_kernel.cu  overlap_kernel.cuh  overlap_kernel_stub.cpp
src/graph/: CMakeLists.txt  delta_read.cpp  delta_read.hpp  graph_builder.cpp  graph_builder.hpp  graph_compactor.cpp  graph_compactor.hpp  graph_filter.cpp  graph_filter.hpp  graph_io.cpp  graph_io.hpp  kmer_sketch.hpp  lossless_graph.hpp  minimizer_sketcher.cpp  minimizer_sketcher.hpp  read_db.cpp  read_db.hpp  reverse_index.hpp
src/io/: CMakeLists.txt  bam_reader.cpp  bam_reader.hpp  fastq_reader.cpp  fastq_reader.hpp  mosdepth_reader.cpp  mosdepth_reader.hpp
src/phase/: CMakeLists.txt  snv_phaser.cpp  snv_phaser.hpp
src/project/: CMakeLists.txt  linear_mapper.cpp  linear_mapper.hpp  pangenome_mapper.cpp  pangenome_mapper.hpp  project_cmd.cpp  project_cmd.hpp  project_report.cpp  project_report.hpp  somatic_delta.cpp  somatic_delta.hpp
src/vpcr/: CMakeLists.txt  vpcr.cpp  vpcr.hpp
tests/: CMakeLists.txt  test_annotation_bed.cpp  test_backend_factory.cpp  test_backend_vtable.cpp  test_bam_reader.cpp  test_bubble_detector.cpp  test_cascade.cpp  test_coverage_conservation.cpp  test_cpu_backend.cpp  test_cpu_thread_determinism.cpp  test_delta_read.cpp  test_e2e_analyze_wiring.cpp  test_e2e_assemble.cpp  test_features.cpp  test_gpu_backend.cpp  test_gpu_stub.cpp  test_graph_builder.cpp  test_graph_compactor.cpp  test_graph_filter.cpp  test_graph_io.cpp  test_hierarchical_disambiguator.cpp  test_kmer_sketch.cpp  test_linear_mapper.cpp  test_lossless_graph.cpp  test_majority_voter.cpp  test_memory.cpp  test_minimizer_sketcher.cpp  test_mixed_decomposer.cpp  test_mosdepth_reader.cpp  test_pangenome_mapper.cpp  test_project_report.cpp  test_project_smoke.cpp  test_read_db.cpp  test_reference_aligner.cpp  test_repeat_cn.cpp  test_reverse_index.cpp  test_snv_phaser.cpp  test_somatic_delta.cpp  test_strand_handling.cpp  test_vaf_band_benchmark.cpp  (+3 more)
tests/fixtures/: generate_branch_complex_fixture.cpp  generate_branch_fixture.cpp  generate_toy_fastq.cpp
workflow/: Snakefile
workflow/config/: config.yaml
workflow/config/slurm/: config.yaml
