# BRANCH source tree
# Sub-modules are added individually as they grow; v0.1 starts with graph/ + backend/.
add_subdirectory(graph)
add_subdirectory(backend)
add_subdirectory(classify)
add_subdirectory(gpu)
add_subdirectory(io)
add_subdirectory(analysis)
add_subdirectory(detect)
add_subdirectory(cli)
